--- a/login.html
+++ b/login.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login de Usuários</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="">
-        <label for="email">E-mail de login:</label><br>
+
+    <header>
+    </header>
+
+    <form class="forms" action="">
+
+        <h2>Login de Usuário</h2>
+
+        <label for="email">E-mail de Login:</label><br>
         <input type="email" id="email" name="email" placeholder="Informe seu e-mail" required><br>
         
         <label for="senha">Senha:</label><br>
@@ -15,5 +23,11 @@
 
         <input type="submit" value="Entrar">
     </form>
+
+    <footer>
+        <p class="nomes">Josiane Batista | Maria Clara Nascimento</p>
+        <p class="autoria">&copy; 2025 Programa Hortalize, Cornélio Procópio - PR.</p>
+    </footer>
+
 </body>
 </html>
