atualizações de cabeçalho e rodapé

--- a/login.html
+++ b/login.html
@@ -9,6 +9,20 @@
 <body>
 
     <header>
+        <div class="programa">
+            <figure>
+                <img src="figs/programa_hortalize.png"
+                    alt="logotipo" height="75">
+            </figure>
+            <h1>Hortalize</h1>
+        </div>
+
+        <nav>
+            <a href="inicial.html"> <!--linkar pagina inicial-->
+                <h1>Página Principal</h1>
+            </a> 
+        </nav>
+        
     </header>
 
     <form class="forms" action="">
@@ -16,10 +30,10 @@
         <h2>Login de Usuário</h2>
 
         <label for="email">E-mail de Login:</label><br>
-        <input type="email" id="email" name="email" placeholder="Informe seu e-mail" required><br>
+        <input type="email" class="campo" name="email" placeholder="Informe seu e-mail" required><br>
         
         <label for="senha">Senha:</label><br>
-        <input type="password" id="senha" name="senha" placeholder="Informe sua senha" required><br>
+        <input type="password" class="campo" name="senha" placeholder="Informe sua senha" required><br>
 
         <input type="submit" value="Entrar">
     </form>
