atualização cabeçalho e rodapé

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Hortalize</title>
+    <title>Cadastro de Usuário</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined">
 </head>
 <body>
 
@@ -12,18 +14,18 @@
         <div class="programa">
             <figure>
                 <img src="figs/programa_hortalize.png"
-                    alt="logotipo" height="75">
+                    alt="logotipo" height="60">
             </figure>
-            <h1>Hortalize</h1>
         </div>
-
         <nav>
             <a href="inicial.html"> <!--linkar pagina inicial-->
+                <i class="material-icons-outlined">home</i>
                 <h1>Página Principal</h1>
             </a> 
         </nav>
         
     </header>
+
 
     <form class="forms" action="">
 
@@ -65,10 +67,30 @@
 
     </form>
 
-    <footer>
-        <p id="autores">Josiane Batista | Maria Clara Nascimento</p>
-        <p id="autoria">&copy; 2025 Programa Hortalize | Cornélio Procópio - PR</p>
-    </footer>
+<footer>
+    <div class="nomes-grid">
+        <span class="nome-esquerda">
+            <a href="https://josibatista.github.io/web-front-end/" target="_blank">
+                Josiane Mariane Batista
+            </a>
+        </span>
+        <span class="divisor">|</span>
+        <span class="nome-direita">
+            <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">
+                Maria Clara Nascimento
+            </a>
+        </span>
+    </div>
+
+    <div>
+        <div class="autoria-grid">
+        <span class="titulo"> 2025 &copy; Programa Hortalize</span>
+        <span class="divisor">|</span>
+        <span class="cidade">Cornélio Procópio - PR</span>
+    </div>
+</footer>
+
+
       
 
 </body>
