--- a/login.html
+++ b/login.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login de Usuários</title>
+    <title>Login de Usuário</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined">
 </head>
 <body>
 
@@ -12,13 +14,12 @@
         <div class="programa">
             <figure>
                 <img src="figs/programa_hortalize.png"
-                    alt="logotipo" height="75">
+                    alt="logotipo" height="60">
             </figure>
-            <h1>Hortalize</h1>
         </div>
-
         <nav>
             <a href="inicial.html"> <!--linkar pagina inicial-->
+                <i class="material-icons-outlined">home</i>
                 <h1>Página Principal</h1>
             </a> 
         </nav>
@@ -29,19 +30,37 @@
 
         <h2>Login de Usuário</h2>
 
-        <label for="email">E-mail de Login:</label><br>
-        <input type="email" class="campo" name="email" placeholder="Informe seu e-mail" required><br>
+        <label for="email">E-mail de Login:</label>
+        <input type="email" class="campo" name="email" placeholder="Informe seu e-mail" required>
         
-        <label for="senha">Senha:</label><br>
-        <input type="password" class="campo" name="senha" placeholder="Informe sua senha" required><br>
+        <label for="senha">Senha:</label>
+        <input type="password" class="campo" name="senha" placeholder="Informe sua senha" required>
 
         <input type="submit" value="Entrar">
     </form>
 
-    <footer>
-        <p class="nomes">Josiane Batista | Maria Clara Nascimento</p>
-        <p class="autoria">&copy; 2025 Programa Hortalize, Cornélio Procópio - PR.</p>
-    </footer>
+<footer>
+    <div class="nomes-grid">
+        <span class="nome-esquerda">
+            <a href="https://josibatista.github.io/web-front-end/" target="_blank">
+                Josiane Mariane Batista
+            </a>
+        </span>
+        <span class="divisor">|</span>
+        <span class="nome-direita">
+            <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">
+                Maria Clara Nascimento
+            </a>
+        </span>
+    </div>
+
+    <div>
+        <div class="autoria-grid">
+        <span class="titulo"> 2025 &copy; Programa Hortalize</span>
+        <span class="divisor">|</span>
+        <span class="cidade">Cornélio Procópio - PR</span>
+    </div>
+</footer>
 
 </body>
 </html>
