atualização dos códigos com mais informações sobre o projeto + mudança no nome do html para "inicial"

--- a/principal.html
+++ b/principal.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa Hortalize</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -15,10 +16,12 @@
         <nav>
             <a href="#">Início</a>
             <a href="#sobre">Sobre</a>
-            <a href="#funciona">Funcionamento</a>
+            <a href="#implementação">Funcionamento</a>
             <a href="#divisao">Divisão</a>
+            <a href="#melhoria">Melhoria</a>
             <a href="#impacto">Impacto</a>
-            <a href="#">Sair</a>
+            <a href="#ods">ODS</a>
+            <a href="cadastro.html">Sair</a>
         </nav>
     </header>
 
@@ -29,19 +32,43 @@
 
     <section class="section" id="sobre">
         <h2>Sobre o Programa</h2>
-        <p>O Programa Hortalize promove segurança alimentar, inclusão social e capacitação, com base na agricultura urbana sustentável. A proposta é revitalizar terrenos baldios para cultivo coletivo, integrando a comunidade no combate à fome e geração de renda.</p>
+        <p>A insegurança alimentar e o uso de agrotóxicos representam problemas globais que afetam tanto a saúde quanto o meio ambiente. 
+            Diante desse cenário, surge a proposta do Programa Hortalize, que visa a implantação de hortas comunitárias em terrenos que 
+            anteriormente estavam baldios.</p>
+        <p>A iniciativa permite que os alimentos cultivados sejam consumidos pelos próprios participantes, doados a famílias em situação de 
+            vulnerabilidade ou vendidos em feiras locais, o que possibilita uma renda extra e incentiva a produção local e sustentável. 
+            Com isso, espera-se que menos famílias passem fome, que haja aumento da produção agrícola sustentável e que se fortaleçam a 
+            comercialização e as parcerias com cooperativas da região.</p>
+        <p>Além disso, o projeto transforma espaços urbanos ociosos em áreas produtivas, permitindo que pessoas em situação de vulnerabilidade 
+            socioeconômica cultivem hortaliças, garantindo segurança alimentar e autonomia financeira.</p>
     </section>
 
-    <section class="section" id="funciona">
-        <h2>Como Funciona</h2>
-        <ol>
-            <li>Identificação do terreno pela prefeitura</li>
-            <li>Planejamento técnico com agrônomos</li>
-            <li>Seleção dos participantes via CRAS</li>
-            <li>Minicurso e início do plantio</li>
-            <li>Colheita e distribuição</li>
-        </ol>
+    <section class="section" id="implementação">
+        <h2>Como Implementar</h2>
+        <p>Para a implementação do Programa Hortalize, a prefeitura é responsável por destinar a verba necessária de acordo com o tamanho do 
+            município, utilizando como base os dados do IBGE. Essa verba é aplicada na estruturação dos terrenos e na capacitação dos participantes.</p>
+        <p>Os participantes do projeto são selecionados pela prefeitura por meio do CRAS (Centro de Referência da Assistência Social), com foco 
+            em famílias em situação de vulnerabilidade. Antes do início do plantio, os participantes recebem capacitação técnica por meio de um 
+            minicurso com acompanhamento de um engenheiro agrônomo.</p>
+        <p>O cultivo segue uma divisão técnica e padronizada: o programa define que 40% da área seja destinada a hortaliças frutosas, 30% a 
+            folhosas e os outros 30% a tuberosas. Essa distribuição busca otimizar o uso da terra e atender às diferentes necessidades alimentares 
+            e econômicas da comunidade.</p>
+        <br>
+        <h3>Como Funciona o Programa</h3>
+        <p>Passo a Passo:</p>
+        <div class="timeline">
+            <div class="step"><strong>1.</strong> A prefeitura identifica um terreno baldio disponível para a criação da horta comunitária.</div>
+            <div class="step"><strong>2.</strong> O terreno é limpo, arado e passa por análise de solo para verificar se está apto para o cultivo.</div>
+            <div class="step"><strong>3.</strong> A seleção dos participantes é feita pelo CRAS (Centro de Referência da Assistência Social).</div>
+            <div class="step"><strong>4.</strong> Os moradores realizam um minicurso de cultivo ministrado com apoio de um engenheiro agrônomo.</div>
+            <div class="step"><strong>5.</strong> Após o curso, inicia-se o plantio das hortaliças no terreno preparado.</div>
+            <div class="step"><strong>6.</strong> A manutenção da horta é feita de forma coletiva pelos participantes.</div>
+            <div class="step"><strong>7.</strong> A colheita é destinada ao consumo próprio, doações e, quando possível, à venda, gerando renda e segurança alimentar.</div>
+        </div>
+
     </section>
+
+
 
     <section class="section" id="divisao">
         <h2>Como o Terreno Será Utilizado</h2>
@@ -54,17 +81,55 @@
         <div class="img-container">
             <img src="./figs/terreno.png" alt="Divisão do terreno por tipo de cultivo" width="400" height="300">
         </div>
+        <p>A escolha de quais hortaliças devem ser cultivadas em cada parte do terreno deve considerar as particularidades regionais, 
+            o clima, a época do ano e os hábitos alimentares da população local. A intenção é aproveitar as condições naturais da região, 
+            reduzir custos com insumos e garantir maior produtividade e aceitação dos alimentos produzidos.</p>
+    </section>
+
+    <section class="section" id="melhoria">
+        <h2>Projeto de Melhoria</h2>
+        <p>Embora o Programa Hortalize já gere impacto positivo ao promover a produção de alimentos saudáveis e o
+            fortalecimento comunitário, uma possível melhoria seria a ampliação de suas ações por meio de parcerias 
+            com empresas do setor privado. Empresas podem contribuir com recursos financeiros, apoio técnico, 
+            fornecimento de equipamentos ou insumos agrícolas, além de oferecer programas de voluntariado corporativo.
+            Essa colaboração não apenas fortalece a execução do projeto, como também amplia sua escala e sustentabilidade. Atendendo, assim,
+            o Obejtivo 17: "Parcerias e meios de implementação", que incentiva a cooperação entre governo, iniciativa privada e sociedade civil
+            para alcançar o desenvolvimento sustentável.</p>
     </section>
 
     <section class="section" id="impacto">
         <h2>Impacto Social</h2>
-        <p>O projeto fortalece a comunidade, proporciona autonomia, renda e contribui para o cumprimento do segundo Objetivo de Desenvolvimento Sustentável (ODS).</p>
+        <p>O Programa Hortalize gera impacto direto na sociedade ao transformar terrenos ociosos em espaços produtivos que promovem segurança 
+            alimentar, geração de renda e inclusão social. Ao envolver comunidades vulneráveis na produção de alimentos saudáveis, o projeto 
+            fortalece os laços comunitários, estimula a autonomia dos participantes e amplia oportunidades de trabalho e aprendizado. 
+            Além disso, contribui para o cumprimento de diversos Objetivos de Desenvolvimento Sustentável (ODS), com destaque para o ODS 2 - 
+            Fome Zero e Agricultura Sustentável.</p>
     </section>
 
+    <section class="section" id="ods">
+        <h2>Outros ODS Atendidos</h2>
+        <p>O Programa Hortalize vai além do combate à fome e da promoção de parcerias. Ele contribui diretamente 
+            para diversos Objetivos de Desenvolvimento Sustentável (ODS) da ONU, promovendo transformações sociais,
+            econômicas e ambientais em comunidades vulneráveis:</p>
+
+        <ul>
+            <li>ODS 1 - Erradicação da pobreza: Gera oportunidade de renda para os participantes através da venda das hortaliças produzidas.</li>
+            <li>ODS 3 - Saúde e bem-estar: Oferece acesso a alimentos livres de agrotóxicos e melhora a nutrição das famílias.</li>
+            <li>ODS 8 - Trabalho decente e crescimento econômico: Valoriza o trabalho coletivo e gera renda local de forma sustentável.</li>
+            <li>ODS 10 - Redução das desigualdades: Garante oportunidades para pessoas em situação de vulnerabilidade social, promovendo inclusão produtiva, autonomia financeira e igualdade de acesso à alimentação saudável.</li>
+            <li>ODS 11 - Cidades e comunidades sustentáveis: Reaproveita terrenos baldios, revitalizando espaços urbanos com impacto social positivo.</li>
+            <li>ODS 12 - Consumo e produção responsáveis: Incentiva práticas agrícolas conscientes, com respeito ao meio ambiente e redução de desperdícios.</li>
+            <li>ODS 17 - Parcerias e meios de implementação: Integra esforços de governo, empresas, cooperativas e comunidade para garantir o sucesso do programa.</li>
+        </ul>
+
+    </section>
+
+
      <footer>
-        <p id="autores">Josiane Batista | Maria Clara Nascimento</p>
+        <p id="autores"><a href="https://josibatista.github.io/web-front-end/" target="_blank">Josiane Batista</a> | <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">Maria Clara Nascimento</a></p>
         <p id="autoria">&copy; 2025 Programa Hortalize | Cornélio Procópio - PR</p>
     </footer>
+
 
 </body>
 </html>
