--- a/inicial.html
+++ b/inicial.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="titulo">
         <h1>Transformando Comunidades com Agricultura Urbana</h1>
         <p>O Programa Hortalize transforma terrenos ociosos em hortas sustentáveis e produtivas.</p>
     </section>
@@ -72,19 +72,25 @@
 
     <section class="section" id="divisao">
         <h2>Como o Terreno Será Utilizado</h2>
-        <p>A horta será dividida da seguinte forma:</p>
-        <ul>
-            <li>🍅 40% - Produção para comercialização</li>
-            <li>🥬 30% - Produção para consumo dos participantes</li>
-            <li>🥕 30% - Produção para doações a famílias e instituições</li>
-        </ul>
-        <div class="img-container">
-            <img src="./figs/terreno.png" alt="Divisão do terreno por tipo de cultivo" width="400" height="300">
+        <div class="grid-terreno">
+            <div class="texto-terreno">
+                <p>A horta será dividida da seguinte forma:</p>
+                <ul>
+                    <li>🍅 <strong>40%</strong> - Produção para comercialização</li>
+                    <li>🥬 <strong>30%</strong> - Produção para consumo dos participantes</li>
+                    <li>🥕 <strong>30%</strong> - Produção para doações a famílias e instituições</li>
+                </ul>
+                <p>A escolha de quais hortaliças devem ser cultivadas em cada parte do terreno deve considerar as particularidades regionais, 
+                    o clima, a época do ano e os hábitos alimentares da população local. A intenção é aproveitar as condições naturais da região, 
+                    reduzir custos com insumos e garantir maior produtividade e aceitação dos alimentos produzidos.</p>
+            </div>
+
+            <div class="img-terreno">
+                <img src="./figs/terreno.png" alt="Divisão do terreno por tipo de cultivo">
+            </div>
         </div>
-        <p>A escolha de quais hortaliças devem ser cultivadas em cada parte do terreno deve considerar as particularidades regionais, 
-            o clima, a época do ano e os hábitos alimentares da população local. A intenção é aproveitar as condições naturais da região, 
-            reduzir custos com insumos e garantir maior produtividade e aceitação dos alimentos produzidos.</p>
     </section>
+
 
     <section class="section" id="melhoria">
         <h2>Projeto de Melhoria</h2>
@@ -99,12 +105,19 @@
 
     <section class="section" id="impacto">
         <h2>Impacto Social</h2>
-        <p>O Programa Hortalize gera impacto direto na sociedade ao transformar terrenos ociosos em espaços produtivos que promovem segurança 
-            alimentar, geração de renda e inclusão social. Ao envolver comunidades vulneráveis na produção de alimentos saudáveis, o projeto 
-            fortalece os laços comunitários, estimula a autonomia dos participantes e amplia oportunidades de trabalho e aprendizado. 
-            Além disso, contribui para o cumprimento de diversos Objetivos de Desenvolvimento Sustentável (ODS), com destaque para o ODS 2 - 
-            Fome Zero e Agricultura Sustentável.</p>
+        <div class="grid-impacto">
+            <div class="texto-impacto">
+                <p>
+                    O Programa Hortalize gera impacto direto na sociedade ao transformar terrenos ociosos em espaços produtivos que promovem segurança alimentar, geração de renda e inclusão social. Ao envolver comunidades vulneráveis na produção de alimentos saudáveis, o projeto fortalece os laços comunitários, estimula a autonomia dos participantes e amplia oportunidades de trabalho e aprendizado.
+                    Além disso, contribui para o cumprimento de diversos Objetivos de Desenvolvimento Sustentável (ODS), com destaque para o ODS 2 – Fome Zero e Agricultura Sustentável.
+                </p>
+            </div>
+            <div class="img-impacto">
+                <img src="./figs/ODS.png" width="200" height="200" alt="ODS 2">
+            </div>
+        </div>
     </section>
+
 
     <section class="section" id="ods">
         <h2>Outros ODS Atendidos</h2>
