atualização do rodapé + adicição de imagens de ODS

--- a/inicial.html
+++ b/inicial.html
@@ -134,13 +134,41 @@
             <li>ODS 12 - Consumo e produção responsáveis: Incentiva práticas agrícolas conscientes, com respeito ao meio ambiente e redução de desperdícios.</li>
             <li>ODS 17 - Parcerias e meios de implementação: Integra esforços de governo, empresas, cooperativas e comunidade para garantir o sucesso do programa.</li>
         </ul>
+        <div class="img-ods">
+            <p>
+                <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-1.svg" alt="ODS 1" width="70"/>
+                <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-3.svg" alt="ODS 3" width="70"/>
+                <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-8.svg" alt="ODS 8" width="70"/>
+                <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-10.svg" alt="ODS 10" width="70"/>
+                <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-11.svg" alt="ODS 11" width="70"/>
+                <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-12.svg" alt="ODS 12" width="70"/>
+                <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-17.svg" alt="ODS 17" width="70"/>
+            </p>
+        </div>
 
     </section>
 
 
-     <footer>
-        <p id="autores"><a href="https://josibatista.github.io/web-front-end/" target="_blank">Josiane Batista</a> | <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">Maria Clara Nascimento</a></p>
-        <p id="autoria">&copy; 2025 Programa Hortalize | Cornélio Procópio - PR</p>
+    <footer>
+        <div class="linha">
+            <span>
+            <a href="https://josibatista.github.io/web-front-end/" target="_blank">
+                Josiane Mariane Batista
+            </a>
+            </span>
+            <span class="divisor">|</span>
+            <span>
+            <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">
+                Maria Clara Nascimento
+            </a>
+            </span>
+        </div>
+
+        <div class="linha">
+            <span>2025 &copy; Programa Hortalize</span>
+            <span class="divisor">|</span>
+            <span>Cornélio Procópio - PR</span>
+        </div>
     </footer>
 
 
