centralizei o rodapé + mudar o nome da nav a para menu + mudança na classe "título"

--- a/inicial.html
+++ b/inicial.html
@@ -17,21 +17,21 @@
         <div class="grid-menu">
             <div class="texto-menu">
                 <nav>
-                    <a href="#">Início</a>
-                    <a href="#sobre">Sobre</a>
-                    <a href="#implementação">Funcionamento</a>
-                    <a href="#divisao">Divisão</a>
-                    <a href="#melhoria">Melhoria</a>
-                    <a href="#impacto">Impacto</a>
-                    <a href="#ods">ODS</a>
+                    <a href="#" class="menu">Início</a>
+                    <a href="#sobre" class="menu">Sobre</a>
+                    <a href="#implementação" class="menu">Funcionamento</a>
+                    <a href="#divisao" class="menu">Divisão</a>
+                    <a href="#melhoria" class="menu">Melhoria</a>
+                    <a href="#impacto" class="menu">Impacto</a>
+                    <a href="#ods" class="menu">ODS</a>
                 </nav>
             </div>
             <div class="icons-menu">
                 <nav>
-                    <a href="cadastro.html">
+                    <a href="cadastro.html" class="menu">
                         <span class="material-symbols-outlined">account_circle</span>
                     </a>
-                    <a href="login.html">
+                    <a href="login.html" class="menu">
                         <span class="material-symbols-outlined">logout</span>
                     </a>
                 </nav>
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-    <section class="titulo">
+    <section class="titulo-principal">
         <h1>Transformando Comunidades com Agricultura Urbana</h1>
         <p>O Programa Hortalize transforma terrenos ociosos em hortas sustentáveis e produtivas.</p>
     </section>
@@ -173,17 +173,22 @@
 
     <footer>
         <div class="nomes-grid">
-            <span class="direita">
-                <a href="https://josibatista.github.io/web-front-end/" target="_blank">Josiane Mariane Batista</a>
+            <span class="nome-esquerda">
+                <a href="https://josibatista.github.io/web-front-end/" target="_blank">
+                    Josiane Mariane Batista
+                </a>
             </span>
             <span class="divisor">|</span>
-            <span class="esquerda">
-                <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">Maria Clara Nascimento</a>
+            <span class="nome-direita">
+                <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">
+                    Maria Clara Nascimento
+                </a>
             </span>
         </div>
 
-        <div class="autoria-grid">
-            <span class="copy">2025 &copy; Programa Hortalize</span>
+        <div>
+            <div class="autoria-grid">
+            <span class="titulo"> 2025 &copy; Programa Hortalize</span>
             <span class="divisor">|</span>
             <span class="cidade">Cornélio Procópio - PR</span>
         </div>
