Atualização inserindo fonte externa

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
 </head>
 <body>
 
@@ -62,7 +63,6 @@
             </ul>
         </section>
 
-        <!-- <button type="button" onclick="login.html">Já tenho conta</button> -->
         <input type="submit" value="Cadastrar">
 
     </form>
