atualização ligando páginas entre si

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </figure>
         </div>
         <nav>
-            <a href="inicial.html"> <!--linkar pagina inicial-->
+            <a href="principal.html">
                 <i class="material-icons-outlined">home</i>
                 <h1>Página Principal</h1>
             </a> 
@@ -63,7 +63,9 @@
             </ul>
         </section>
 
-        <input type="submit" value="Cadastrar">
+        <a href="login.html">
+            <button type="button">Cadastrar</button>
+        </a>
 
     </form>
 
