--- a/login.html
+++ b/login.html
@@ -37,7 +37,9 @@
         <label for="senha">Senha:</label>
         <input type="password" class="campo" name="senha" placeholder="Informe sua senha" required>
 
-        <input type="submit" value="Entrar">
+        <a href="principal.html">
+            <button type="button">Entrar</button>
+        </a>
     </form>
 
 <footer>
