criação de classe para h2

--- a/inicial.html
+++ b/inicial.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
-<body>
 
+<body>
     <header>
         <div class="logo">
             <img src="./figs/programa_hortalize.png" alt="Logo Programa Hortalize">
@@ -45,7 +45,7 @@
     </section>
 
     <section class="section" id="sobre">
-        <h2>Sobre o Programa</h2>
+        <h2 class="titulo-h2">Sobre o Programa</h2>
         <p>A insegurança alimentar e o uso de agrotóxicos representam problemas globais que afetam tanto a saúde quanto o meio ambiente. 
             Diante desse cenário, surge a proposta do Programa Hortalize, que visa a implantação de hortas comunitárias em terrenos que 
             anteriormente estavam baldios.</p>
@@ -58,7 +58,7 @@
     </section>
 
     <section class="section" id="implementação">
-        <h2>Como Implementar</h2>
+        <h2 class="titulo-h2">Como Implementar</h2>
         <p>Para a implementação do Programa Hortalize, a prefeitura é responsável por destinar a verba necessária de acordo com o tamanho do 
             município, utilizando como base os dados do IBGE. Essa verba é aplicada na estruturação dos terrenos e na capacitação dos participantes.</p>
         <p>Os participantes do projeto são selecionados pela prefeitura por meio do CRAS (Centro de Referência da Assistência Social), com foco 
@@ -85,7 +85,7 @@
 
 
     <section class="section" id="divisao">
-        <h2>Como o Terreno Será Utilizado</h2>
+        <h2 class="titulo-h2">Como o Terreno Será Utilizado</h2>
         <div class="grid-terreno">
             <div class="texto-terreno">
                 <p>A horta será dividida da seguinte forma:</p>
@@ -107,7 +107,7 @@
 
 
     <section class="section" id="melhoria">
-        <h2>Projeto de Melhoria</h2>
+        <h2 class="titulo-h2">Projeto de Melhoria</h2>
         <p>Embora o Programa Hortalize já gere impacto positivo ao promover a produção de alimentos saudáveis e o
             fortalecimento comunitário, uma possível melhoria seria a ampliação de suas ações por meio de parcerias 
             com empresas do setor privado. Empresas podem contribuir com recursos financeiros, apoio técnico, 
@@ -118,7 +118,7 @@
     </section>
 
     <section class="section" id="impacto">
-        <h2>Impacto Social</h2>
+        <h2 class="titulo-h2">Impacto Social</h2>
         <div class="grid-impacto">
             <div class="texto-impacto">
                 <p>
@@ -134,7 +134,7 @@
 
 
     <section class="section" id="ods">
-        <h2>Outros ODS Atendidos</h2>
+        <h2 class="titulo-h2">Outros ODS Atendidos</h2>
         <p>O Programa Hortalize vai além do combate à fome e da promoção de parcerias. Ele contribui diretamente 
             para diversos Objetivos de Desenvolvimento Sustentável (ODS) da ONU, promovendo transformações sociais,
             econômicas e ambientais em comunidades vulneráveis:</p>
