Atualização alterando link da página de cadastro

--- a/inicial.html
+++ b/inicial.html
@@ -28,7 +28,7 @@
             </div>
             <div class="icons-menu">
                 <nav>
-                    <a href="cadastro.html" class="menu">
+                    <a href="index.html" class="menu">
                         <span class="material-symbols-outlined">account_circle</span>
                     </a>
                     <a href="login.html" class="menu">
