Atualização identação e links

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             </figure>
         </div>
         <nav>
-            <a href="inicial.html"> <!--linkar pagina inicial-->
+            <a href="inicial.html" class="principal"> 
                 <i class="material-icons-outlined">home</i>
                 <h1>Página Principal</h1>
             </a> 
@@ -29,7 +29,7 @@
 
     <form class="forms" action="">
 
-        <h2>Login de Usuário</h2>
+        <h2 class="titulo-forms">Login de Usuário</h2>
 
         <label for="email">E-mail de Login:</label>
         <input type="email" class="campo" name="email" placeholder="Informe seu e-mail" required>
@@ -37,33 +37,33 @@
         <label for="senha">Senha:</label>
         <input type="password" class="campo" name="senha" placeholder="Informe sua senha" required>
 
-        <a href="principal.html">
+        <a href="inicial.html">
             <button type="button">Entrar</button>
         </a>
     </form>
 
-<footer>
-    <div class="nomes-grid">
-        <span class="nome-esquerda">
-            <a href="https://josibatista.github.io/web-front-end/" target="_blank">
-                Josiane Mariane Batista
-            </a>
-        </span>
-        <span class="divisor">|</span>
-        <span class="nome-direita">
-            <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">
-                Maria Clara Nascimento
-            </a>
-        </span>
-    </div>
+    <footer>
+        <div class="nomes-grid">
+            <span class="nome-esquerda">
+                <a href="https://josibatista.github.io/web-front-end/" target="_blank">
+                    Josiane Mariane Batista
+                </a>
+            </span>
+            <span class="divisor">|</span>
+            <span class="nome-direita">
+                <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">
+                    Maria Clara Nascimento
+                </a>
+            </span>
+        </div>
 
-    <div>
-        <div class="autoria-grid">
-        <span class="titulo"> 2025 &copy; Programa Hortalize</span>
-        <span class="divisor">|</span>
-        <span class="cidade">Cornélio Procópio - PR</span>
-    </div>
-</footer>
+        <div>
+            <div class="autoria-grid">
+            <span class="titulo"> 2025 &copy; Programa Hortalize</span>
+            <span class="divisor">|</span>
+            <span class="cidade">Cornélio Procópio - PR</span>
+        </div>
+    </footer>
 
 </body>
 </html>
