--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </figure>
         </div>
         <nav>
-            <a href="principal.html">
+            <a href="inicial.html" class="principal">
                 <i class="material-icons-outlined">home</i>
                 <h1>Página Principal</h1>
             </a> 
@@ -30,7 +30,7 @@
 
     <form class="forms" action="">
 
-        <h2>Criação de Conta</h2>
+        <h2 class="titulo-forms">Criação de Conta</h2>
 
         <label for="username">Nome Completo:</label>
         <input type="text" class="campo" name="username" placeholder="Informe seu nome completo" required>
@@ -69,31 +69,28 @@
 
     </form>
 
-<footer>
-    <div class="nomes-grid">
-        <span class="nome-esquerda">
-            <a href="https://josibatista.github.io/web-front-end/" target="_blank">
-                Josiane Mariane Batista
-            </a>
-        </span>
-        <span class="divisor">|</span>
-        <span class="nome-direita">
-            <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">
-                Maria Clara Nascimento
-            </a>
-        </span>
-    </div>
-
-    <div>
-        <div class="autoria-grid">
-        <span class="titulo"> 2025 &copy; Programa Hortalize</span>
-        <span class="divisor">|</span>
-        <span class="cidade">Cornélio Procópio - PR</span>
-    </div>
-</footer>
-
-
-      
+    <footer>
+        <div class="nomes-grid">
+            <span class="nome-esquerda">
+                <a href="https://josibatista.github.io/web-front-end/" target="_blank">
+                    Josiane Mariane Batista
+                </a>
+            </span>
+            <span class="divisor">|</span>
+            <span class="nome-direita">
+                <a href="https://mariandj.github.io/Programa-o-Web-Front-End/" target="_blank">
+                    Maria Clara Nascimento
+                </a>
+            </span>
+        </div>
+    
+        <div>
+            <div class="autoria-grid">
+            <span class="titulo"> 2025 &copy; Programa Hortalize</span>
+            <span class="divisor">|</span>
+            <span class="cidade">Cornélio Procópio - PR</span>
+        </div>
+    </footer> 
 
 </body>
 </html>
