Atualização corrigindo campos obrigatórios formulários

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
 
-    <form class="forms" action="">
+    <form class="forms" action="login.html" method="get">
 
         <h2 class="titulo-forms">Criação de Conta</h2>
 
@@ -63,9 +63,7 @@
             </ul>
         </section>
 
-        <a href="login.html">
-            <button type="button">Cadastrar</button>
-        </a>
+        <button type="submit">Entrar</button>
 
     </form>
 
