Atualização renomeando inicial para principal

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </figure>
         </div>
         <nav>
-            <a href="inicial.html" class="principal">
+            <a href="principal.html" class="principal">
                 <i class="material-icons-outlined">home</i>
                 <h1>Página Principal</h1>
             </a> 
