--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             </figure>
         </div>
         <nav>
-            <a href="inicial.html" class="principal"> 
+            <a href="principal.html" class="principal"> 
                 <i class="material-icons-outlined">home</i>
                 <h1>Página Principal</h1>
             </a> 
@@ -27,7 +27,7 @@
         
     </header>
 
-    <form class="forms" action="inicial.html" method="get">
+    <form class="forms" action="principal.html" method="get">
 
         <h2 class="titulo-forms">Login de Usuário</h2>
 
@@ -41,7 +41,7 @@
         
     </form>
 
-    <footer>
+    <footer class="rodape-login">
         <div class="nomes-grid">
             <span class="nome-esquerda">
                 <a href="https://josibatista.github.io/web-front-end/" target="_blank">
