organização do css + alteração na classe do logotipo na página principal

--- a/principal.html
+++ b/principal.html
@@ -11,9 +11,10 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="./figs/programa_hortalize.png" alt="Logo Programa Hortalize">
-        </div>
+        <figure>
+            <img src="figs/programa_hortalize.png"
+                alt="logotipo" height="60">
+        </figure>
         <div class="grid-menu">
             <div class="texto-menu">
                 <nav>
