Atualização de cabeçalho e botão

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             </figure>
         </div>
         <nav>
-            <a href="principal.html" class="principal">
+            <a href="principal.html" class="menu">
                 <i class="material-icons-outlined">home</i>
-                <h1>Página Principal</h1>
             </a> 
         </nav>
         
@@ -64,7 +63,8 @@
         </section>
 
         <button type="submit">Entrar</button>
-
+        <a href="login.html"><button type="button">Já possuo conta</button></a>
+        
     </form>
 
     <footer>
