--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </ul>
         </section>
 
-        <button type="submit">Entrar</button>
+        <button type="submit">Cadastrar</button>
         <a href="login.html"><button type="button">Já possuo conta</button></a>
         
     </form>
