update linkando pagina administrador as demais

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             </figure>
         </div>
         <nav>
-            <a href="principal.html" class="menu">
+            <a href="admin.html" name="Admin" class="menu">
+                <span class="material-symbols-outlined">shield_person</span>
+            </a>
+            <a href="principal.html" name="Principal" class="menu">
                 <i class="material-icons-outlined">home</i>
             </a> 
         </nav>
